# monitor_sites

./: Cargo.toml  config.toml
src/: checker.rs  config.rs  daemon.rs  db.rs  ipc.rs  log.rs  main.rs  scanner.rs
src/gui/: mod.rs  socket.rs  tray.rs
