[package]
name = "monitor_sites"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2"
serde = { version = "1", features = ["derive"]}
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
interprocess = "2"
dirs = "5"
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
tray-icon = "0.19"
[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.19"
chrono = "0.4"
chrono-tz = "0.9"
serde_json = "1"
egui = "0.27"
eframe = "0.27"
image = "0.24"
egui_extras = "0.27"


# interprocess   → comunicação entre processos
#                abstrai Unix socket (Linux/macOS) e Named pipe (Windows)
#                você escreve o IPC uma vez, roda nas três plataformas

# dirs           → caminhos do sistema por plataforma
#                /tmp no Linux
#                %TEMP% no Windows  
#                /tmp no macOS
#                também resolve home, config, cache, data por OS
# 